--- a/package.json
+++ b/package.json
@@ -7,14 +7,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.1.2",
+    "@heroicons/react": "^2.0.4",
+    "@mailchimp/mailchimp_marketing": "^3.0.78",
     "@types/node": "^18.6.3",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "classnames": "^2.3.1",
-    "date-fns": "^2.28.0",
+    "date-fns": "^2.29.2",
+    "isomorphic-dompurify": "^0.22.0",
+    "isomorphic-unfetch": "^3.1.0",
     "next": "latest",
+    "next-seo": "^5.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "static-tweets": "^0.8.0",
     "typescript": "^4.7.4"
   },
   "devDependencies": {
