--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^18.0.6",
     "classnames": "^2.3.1",
     "date-fns": "^2.29.2",
+    "formidable": "^3.2.4",
     "isomorphic-dompurify": "^0.22.0",
     "isomorphic-unfetch": "^3.1.0",
     "next": "latest",
@@ -22,6 +23,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "static-tweets": "^0.8.0",
+    "superagent": "^8.0.0",
     "typescript": "^4.7.4"
   },
   "devDependencies": {
