--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "isomorphic-unfetch": "^3.1.0",
     "next": "latest",
     "next-seo": "^5.5.0",
+    "next-sitemap": "^3.1.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "static-tweets": "^0.8.0",
