--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^18.0.6",
     "classnames": "^2.3.1",
     "date-fns": "^2.29.2",
+    "flowbite": "^1.5.3",
     "formidable": "^3.2.4",
     "isomorphic-dompurify": "^0.22.0",
     "isomorphic-unfetch": "^3.1.0",
