--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
     "@types/react-dom": "^18.0.6",
     "classnames": "^2.3.1",
     "date-fns": "^2.29.2",
+    "eslint-config-next": "^13.0.0",
     "flowbite": "^1.5.3",
     "formidable": "^3.2.4",
     "isomorphic-dompurify": "^0.22.0",
     "isomorphic-unfetch": "^3.1.0",
-    "next": "latest",
+    "next": "^13.0.0",
     "next-sitemap": "^3.1.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
