--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^18.6.3",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "@vercel/analytics": "^0.1.1",
     "classnames": "^2.3.1",
     "date-fns": "^2.29.2",
     "eslint-config-next": "^13.0.0",
